Fixed sidebar on mobile

--- a/style.css
+++ b/style.css
@@ -74,10 +74,8 @@ body {
   min-height: 100vh;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+.all-but-footer {
+  display: flex;
 }
 
 button,
@@ -85,17 +83,18 @@ button,
   cursor: pointer;
 }
 
+.icon {
+  position: sticky;
+}
+
 /* Sidebar */
 aside {
-  grid-area: 1 / 1 / 6 / 2;
+  position: sticky;
+  min-width: 250px;
   background-color: #1992d4;
   color: white;
-}
-header {
-  grid-area: 1 / 2 / 2 / 6;
-}
-main {
-  grid-area: 2 / 2 / 6 / 6;
+
+  position: sticky;
 }
 
 #dashboard {
@@ -140,17 +139,16 @@ header {
 
 .search-bar-container,
 .profile-menu-container {
-  margin: 0 50px;
   display: flex;
   justify-content: space-between;
 }
 
 .search-bar-container {
-  margin: 20px 50px;
+  padding: 20px 70px;
 }
 
 .profile-menu-container {
-  margin-bottom: 20px;
+  padding: 0 50px 20px 50px;
 }
 
 .search-bar-container .icon {
@@ -288,7 +286,6 @@ hr {
 /* Footer */
 
 footer {
-  width: 100%;
   height: 50px;
 
   background-color: rgb(194, 199, 206);
@@ -326,6 +323,7 @@ footer {
   .search-bar-container {
     display: flex;
     justify-content: center;
+    padding: 20px 0;
   }
 
   .profile-menu-container {
@@ -336,6 +334,10 @@ footer {
 }
 
 @media screen and (max-width: 650px) {
+  aside {
+    min-width: 100px;
+  }
+
   nav span {
     display: none;
   }
@@ -344,15 +346,19 @@ footer {
     display: flex;
     flex-direction: column;
   }
+
+  .icon {
+    min-width: 60px;
+  }
+
+  #dashboard-icon {
+    height: 100px;
+  }
 }
 
 @media screen and (max-width: 500px) {
   h2 {
     display: none;
-  }
-
-  .icon {
-    min-width: 30px;
   }
 
   .project-box-container {
